--- a/config/rbac/nodemaintenance_editor_role.yaml
+++ b/config/rbac/nodemaintenance_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: nodemaintenance-editor-role
 rules:
 - apiGroups:
-  - nodemaintenance.kubevirt.io
+  - nodemaintenance.medik8s.io
   resources:
   - nodemaintenances
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - nodemaintenance.kubevirt.io
+  - nodemaintenance.medik8s.io
   resources:
   - nodemaintenances/status
   verbs:
