--- a/config/samples/nodemaintenance_v1beta1_nodemaintenance.yaml
+++ b/config/samples/nodemaintenance_v1beta1_nodemaintenance.yaml
@@ -1,4 +1,4 @@
-apiVersion: nodemaintenance.kubevirt.io/v1beta1
+apiVersion: nodemaintenance.medik8s.io/v1beta1
 kind: NodeMaintenance
 metadata:
   name: nodemaintenance-sample
