--- a/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
+++ b/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
@@ -1,14 +1,14 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: nodemaintenances.nodemaintenance.kubevirt.io
+  labels:
+    node-maintenance-operator: ""
+  name: nodemaintenances.nodemaintenance.medik8s.io
 spec:
-  group: nodemaintenance.kubevirt.io
+  group: nodemaintenance.medik8s.io
   names:
     kind: NodeMaintenance
     listKind: NodeMaintenanceList
