--- a/config/crd/bases/nodemaintenance.medik8s.io_nodemaintenances.yaml
+++ b/config/crd/bases/nodemaintenance.medik8s.io_nodemaintenances.yaml
@@ -1,14 +1,14 @@
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  labels:
-    node-maintenance-operator: ""
-  name: nodemaintenances.nodemaintenance.kubevirt.io
+  name: nodemaintenances.nodemaintenance.medik8s.io
 spec:
-  group: nodemaintenance.kubevirt.io
+  group: nodemaintenance.medik8s.io
   names:
     kind: NodeMaintenance
     listKind: NodeMaintenanceList
