--- a/config/crd/patches/webhook_in_nodemaintenances.yaml
+++ b/config/crd/patches/webhook_in_nodemaintenances.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: nodemaintenances.nodemaintenance.kubevirt.io
+  name: nodemaintenances.nodemaintenance.medik8s.io
 spec:
   conversion:
     strategy: Webhook
