--- a/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: OpenShift Optional
     description: Node Maintenance Operator for cordoning and draining nodes.
     operators.openshift.io/infrastructure-features: '["disconnected"]'
-    repository: https://github.com/kubevirt/node-maintenance-operator
+    repository: https://github.com/medik8s/node-maintenance-operator
   name: node-maintenance-operator.v0.0.0
   namespace: placeholder
 spec:
@@ -17,7 +17,7 @@ spec:
     - description: NodeMaintenance is the Schema for the nodemaintenances API
       displayName: Node Maintenance
       kind: NodeMaintenance
-      name: nodemaintenances.nodemaintenance.kubevirt.io
+      name: nodemaintenances.nodemaintenance.medik8s.io
       version: v1beta1
   description: |
     Node Maintenance Operator
@@ -44,17 +44,17 @@ spec:
   - supported: false
     type: AllNamespaces
   keywords:
-  - KubeVirt
+  - medik8s
   - Virtualization
   - Node-maintenance
   links:
-  - name: KubeVirt
-    url: https://kubevirt.io
+  - name: medik8s
+    url: https://medik8s.io
   - name: Source Code
-    url: https://github.com/kubevirt/node-maintenance-operator
+    url: https://github.com/medik8s/node-maintenance-operator
   maintainers:
-  - email: kubevirt-dev@googlegroups.com
-    name: KubeVirt project
+  - email: kni-lifecycle-team@redhat.com
+    name: Dragonfly Team
   maturity: beta
   provider:
     name: Red Hat
