--- a/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
@@ -45,7 +45,6 @@ spec:
     type: AllNamespaces
   keywords:
   - medik8s
-  - Virtualization
   - Node-maintenance
   links:
   - name: medik8s
@@ -53,9 +52,10 @@ spec:
   - name: Source Code
     url: https://github.com/medik8s/node-maintenance-operator
   maintainers:
-  - email: kni-lifecycle-team@redhat.com
-    name: Dragonfly Team
+  - email: medik8s@googlegroups.com
+    name: Medik8s Team
   maturity: beta
   provider:
-    name: Red Hat
+    name: medik8s
+    url: https://github.com/medik8s
   version: 0.0.0
