--- a/.github/workflows/pre-submit.yaml
+++ b/.github/workflows/pre-submit.yaml
@@ -1,4 +1,4 @@
-name: Tests and build for PRs
+name: Tests and build open and merged PRs
 on:
   push:
     branches:
@@ -12,6 +12,7 @@ on:
       - release-*
 jobs:
   test-and-build:
+    name: Test and build PRs
     runs-on: ubuntu-20.04
     steps:
     - name: Checkout code
