--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -277,7 +277,7 @@ spec:
   - medik8s
   - Node-maintenance
   links:
-  - name: medik8s
+  - name: Node Maintenance Operator
     url: https://medik8s.io
   - name: Source Code
     url: https://github.com/medik8s/node-maintenance-operator
@@ -286,7 +286,7 @@ spec:
     name: Medik8s Team
   maturity: beta
   provider:
-    name: medik8s
+    name: Medik8s
     url: https://github.com/medik8s
   version: 0.0.1
   webhookdefinitions:
