--- a/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
+++ b/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
@@ -13,6 +13,8 @@ spec:
     kind: NodeMaintenance
     listKind: NodeMaintenanceList
     plural: nodemaintenances
+    shortNames:
+    - nm
     singular: nodemaintenance
   scope: Cluster
   versions:
