--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -34,6 +34,7 @@ spec:
           key: node-role.kubernetes.io/master
       securityContext:
         runAsNonRoot: true
+      priorityClassName: system-cluster-critical
       containers:
       - command:
         - /manager
