--- a/.github/workflows/post-submit.yaml
+++ b/.github/workflows/post-submit.yaml
@@ -1,4 +1,4 @@
-name: Publish Container Images on PR merges and for tags
+name: Publish Container Images
 on:
   push:
     branches:
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Log in to Quay.io
-        uses: redhat-actions/podman-login@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
