--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -21,6 +21,7 @@ metadata:
     containerImage: ""
     createdAt: ""
     description: Node Maintenance Operator for cordoning and draining nodes.
+    olm.skipRange: '>=0.12.0 <0.13.0'
     operators.operatorframework.io/builder: operator-sdk-v1.22.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/medik8s/node-maintenance-operator
