--- a/test/manifests/fake-etcd-quorum-guard.yaml
+++ b/test/manifests/fake-etcd-quorum-guard.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: openshift-etcd
 ---
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   namespace: openshift-etcd
