Apply pod security standards with Pod Security Admission (PSA)
In order to comply with the restricted profile, the pod needs to have runAsNonRoot: true, and all containers need to have allowPrivilegeEscalation:false and drop all caps. Also the Dockerfile should set a USER.

--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -272,6 +272,9 @@ spec:
                     memory: 20Mi
                 securityContext:
                   allowPrivilegeEscalation: false
+                  capabilities:
+                    drop:
+                    - ALL
               priorityClassName: system-cluster-critical
               securityContext:
                 runAsNonRoot: true
