--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -51,6 +51,9 @@ spec:
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - "ALL"
         livenessProbe:
           httpGet:
             path: /healthz
