Fix namespace detection in NMO must-gather
Fix for ECOPROJECT-1031

--- a/must-gather/Dockerfile
+++ b/must-gather/Dockerfile
@@ -1,7 +1,7 @@
 FROM quay.io/openshift/origin-must-gather:4.12.0 AS builder
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal
-RUN microdnf install tar rsync
+RUN microdnf install tar rsync jq
 
 # Copy must-gather required binaries
 COPY --from=builder /usr/bin/oc /usr/bin/oc
