--- a/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
@@ -8,7 +8,7 @@ metadata:
     containerImage: ""
     createdAt: ""
     description: Node Maintenance Operator for cordoning and draining nodes.
-    olm.skipRange: '>=0.12.0 <0.13.0'
+    olm.skipRange: '>=0.12.0'
     repository: https://github.com/medik8s/node-maintenance-operator
     support: Medik8s
   name: node-maintenance-operator.v0.0.0
