Automate Github Release Draft with Github Action
Automatically create Github release when we create git tag, and it creates the draft with a nice structure and with the bundle dir (for community releases). We also create new targets for community usage

--- a/.github/workflows/pre-submit.yaml
+++ b/.github/workflows/pre-submit.yaml
@@ -23,4 +23,4 @@ jobs: # jobs to run
       run: make check
 
     - name: Build images
-      run: make container-build
+      run: make container-build-community
