Adjust to API changes made to lease logic in common repo
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -93,6 +93,7 @@ spec:
           resources:
           - namespaces
           verbs:
+          - create
           - get
         - apiGroups:
           - ""
