--- a/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
@@ -9,6 +9,7 @@ metadata:
     createdAt: ""
     description: Node Maintenance Operator for cordoning and draining nodes.
     olm.skipRange: '>=0.12.0'
+    operatorframework.io/suggested-namespace: openshift-workload-availability
     repository: https://github.com/medik8s/node-maintenance-operator
     support: Medik8s
   name: node-maintenance-operator.v0.0.0
