--- a/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/node-maintenance-operator.clusterserviceversion.yaml
@@ -99,4 +99,5 @@ spec:
   provider:
     name: Medik8s
     url: https://github.com/medik8s
+  replaces: node-maintenance-operator.v0.0.1
   version: 0.0.0
