Prefer scheduling on OCP infra nodes
Infra nodes are a better fit than control plane nodes on OCP, thus we prefer NMO pod to be scheduled on an infra node over a control plane node

--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -225,14 +225,24 @@ spec:
             spec:
               affinity:
                 nodeAffinity:
-                  requiredDuringSchedulingIgnoredDuringExecution:
-                    nodeSelectorTerms:
-                    - matchExpressions:
+                  preferredDuringSchedulingIgnoredDuringExecution:
+                  - preference:
+                      matchExpressions:
+                      - key: node-role.kubernetes.io/infra
+                        operator: In
+                        values:
+                        - reserved
+                    weight: 3
+                  - preference:
+                      matchExpressions:
                       - key: node-role.kubernetes.io/master
-                        operator: Exists
-                    - matchExpressions:
+                        operator: In
+                    weight: 1
+                  - preference:
+                      matchExpressions:
                       - key: node-role.kubernetes.io/control-plane
-                        operator: Exists
+                        operator: In
+                    weight: 1
               containers:
               - args:
                 - --health-probe-bind-address=:8081
@@ -283,8 +293,18 @@ spec:
               tolerations:
               - effect: NoSchedule
                 key: node-role.kubernetes.io/master
+                operator: Exists
               - effect: NoSchedule
                 key: node-role.kubernetes.io/control-plane
+                operator: Exists
+              - effect: NoSchedule
+                key: node-role.kubernetes.io/infra
+                operator: Exists
+                value: reserved
+              - effect: NoExecute
+                key: node-role.kubernetes.io/infra
+                operator: Exists
+                value: reserved
       permissions:
       - rules:
         - apiGroups:
