--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -229,19 +229,17 @@ spec:
                   - preference:
                       matchExpressions:
                       - key: node-role.kubernetes.io/infra
-                        operator: In
-                        values:
-                        - reserved
+                        operator: Exists
                     weight: 3
                   - preference:
                       matchExpressions:
                       - key: node-role.kubernetes.io/master
-                        operator: In
+                        operator: Exists
                     weight: 1
                   - preference:
                       matchExpressions:
                       - key: node-role.kubernetes.io/control-plane
-                        operator: In
+                        operator: Exists
                     weight: 1
               containers:
               - args:
@@ -300,11 +298,9 @@ spec:
               - effect: NoSchedule
                 key: node-role.kubernetes.io/infra
                 operator: Exists
-                value: reserved
               - effect: NoExecute
                 key: node-role.kubernetes.io/infra
                 operator: Exists
-                value: reserved
       permissions:
       - rules:
         - apiGroups:
