--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -11,6 +11,7 @@ metadata:
             "name": "nodemaintenance-sample"
           },
           "spec": {
+            "evictionTimeout": "30s",
             "nodeName": "node02",
             "reason": "Test node maintenance"
           }
@@ -43,6 +44,11 @@ spec:
         name: nodemaintenances
         version: v1beta1
       specDescriptors:
+      - description: EvictionTimeout is the timeout for pods eviction by drain/delete
+          before giving up Zero means infinite Valid time units are "ms", "s", "m",
+          "h".
+        displayName: Eviction Timeout
+        path: evictionTimeout
       - description: Node name to apply maintanance on/off
         displayName: Node Name
         path: nodeName
