Update readme and example with EvictionTimeout field

--- a/config/samples/nodemaintenance_v1beta1_nodemaintenance.yaml
+++ b/config/samples/nodemaintenance_v1beta1_nodemaintenance.yaml
@@ -3,5 +3,6 @@ kind: NodeMaintenance
 metadata:
   name: nodemaintenance-sample
 spec:
+  evictionTimeout: "30s"
   nodeName: node02
   reason: "Test node maintenance"
