--- a/.github/workflows/post-submit.yaml
+++ b/.github/workflows/post-submit.yaml
@@ -11,54 +11,26 @@ permissions:
   pull-requests: read
 
 jobs:
-  push-images:
-    name: Build and push images to quay.io/medik8s
+  push_to_registry:
+    name: Build and push unversioned images to quay.io/medik8s
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
       - name: Log in to Quay.io
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
           registry: quay.io
 
-      - name: Build and push CSV 0.0.1 + latest images for PR merges to main
-        if: ${{ github.ref_type != 'tag' }}
+      - name: Build and push CSV version 0.0.1 with latest images
         run: export IMAGE_REGISTRY=quay.io/medik8s && make container-build-and-push-community
-
-      - name: Build and push versioned CSV and images for tags
-        if: ${{ github.ref_type == 'tag' }}
-        # remove leading 'v' from tag!
-        run: export VERSION=$(echo $GITHUB_REF_NAME | sed 's/v//') && make container-build-and-push-community
-
-      - name: Create release with manifests
-        if: ${{ github.ref_type == 'tag' }}
-        # https://github.com/marketplace/actions/github-release-create-update-and-upload-assets
-        uses: meeDamian/github-release@2.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          draft: true
-          body: |
-            # Node Maintenance Operator ${{ github.ref_name }}
-            
-            ## Notable Changes
-            
-            * TODO
-            
-            ## Release Artifacts
-            
-            ### Images
-            * Operator: quay.io/medik8s/node-maintenance-operator:${{ github.ref_name }}
-            * Bundle: quay.io/medik8s/node-maintenance-operator-bundle:${{ github.ref_name }}
-            * Catalog aka Index: quay.io/medik8s/node-maintenance-operator-catalog:${{ github.ref_name }}
-            
-            ### Source code and OLM manifests
-            Please find the source code and the OLM manifests in the `Assets` section below.
-          gzip: folders
-          files: >
-            Manifests:bundle/
