--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -67,6 +67,7 @@ spec:
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
             - "ALL"
