--- a/bundle/manifests/node-maintenance-operator-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle/manifests/node-maintenance-operator-controller-manager-metrics-service_v1_service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
+    app.kubernetes.io/name: node-maintenance-operator
     control-plane: controller-manager
     node-maintenance-operator: ""
   name: node-maintenance-operator-controller-manager-metrics-service
@@ -13,6 +14,7 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
+    app.kubernetes.io/name: node-maintenance-operator
     control-plane: controller-manager
     node-maintenance-operator: ""
 status:
