--- a/bundle/manifests/node-maintenance-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/manifests/node-maintenance-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -3,6 +3,7 @@ kind: ClusterRole
 metadata:
   creationTimestamp: null
   labels:
+    app.kubernetes.io/name: node-maintenance-operator
     node-maintenance-operator: ""
   name: node-maintenance-operator-metrics-reader
 rules:
