--- a/bundle/manifests/node-maintenance-operator-webhook-service_v1_service.yaml
+++ b/bundle/manifests/node-maintenance-operator-webhook-service_v1_service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
+    app.kubernetes.io/name: node-maintenance-operator
     node-maintenance-operator: ""
   name: node-maintenance-operator-webhook-service
 spec:
@@ -11,6 +12,7 @@ spec:
     protocol: TCP
     targetPort: 9443
   selector:
+    app.kubernetes.io/name: node-maintenance-operator
     control-plane: controller-manager
     node-maintenance-operator: ""
 status:
