--- a/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
+++ b/bundle/manifests/nodemaintenance.medik8s.io_nodemaintenances.yaml
@@ -5,6 +5,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.14.0
   creationTimestamp: null
   labels:
+    app.kubernetes.io/name: node-maintenance-operator
     node-maintenance-operator: ""
   name: nodemaintenances.nodemaintenance.medik8s.io
 spec:
