1. Add custom label, propagate the label to all the right files. 2. Add test that validate retrieval of operator controller pod by the label.

--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -366,6 +366,7 @@ spec:
   provider:
     name: Medik8s
     url: https://github.com/medik8s
+  replaces: node-maintenance-operator.v0.0.1
   version: 0.0.1
   webhookdefinitions:
   - admissionReviewVersions:
