--- a/bundle/manifests/node-maintenance-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle/manifests/node-maintenance-controller-manager-metrics-service_v1_service.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
+    app.kubernetes.io/component: controller-manager
     app.kubernetes.io/name: node-maintenance-operator
-    control-plane: controller-manager
     node-maintenance-operator: ""
   name: node-maintenance-controller-manager-metrics-service
 spec:
@@ -14,8 +14,8 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
+    app.kubernetes.io/component: controller-manager
     app.kubernetes.io/name: node-maintenance-operator
-    control-plane: controller-manager
     node-maintenance-operator: ""
 status:
   loadBalancer: {}
