--- a/bundle/manifests/node-maintenance-webhook-service_v1_service.yaml
+++ b/bundle/manifests/node-maintenance-webhook-service_v1_service.yaml
@@ -12,8 +12,8 @@ spec:
     protocol: TCP
     targetPort: 9443
   selector:
+    app.kubernetes.io/component: controller-manager
     app.kubernetes.io/name: node-maintenance-operator
-    control-plane: controller-manager
     node-maintenance-operator: ""
 status:
   loadBalancer: {}
