Fix labels: - Add recommended app.kubernetes.io/name label to everything
  With these changes we prevent services selecting pods by other
  operators, because they all have the control-plane: controller-manager
  label by default.

  Because deployment updates with modified labels fail, also rename the
  deployment by modifying the namePrefix (causes bundle file renames as
  well).

- Add test that validate retrieval of operator controller pod by the label.

- Add the default container label, for easier getting desired logs.

--- a/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-maintenance-operator.clusterserviceversion.yaml
@@ -18,8 +18,8 @@ metadata:
       ]
     capabilities: Basic Install
     categories: OpenShift Optional
-    containerImage: quay.io/rh-ee-slevi/node-maintenance-operator:latest
-    createdAt: 2025-01-16 19:42:40
+    containerImage: ""
+    createdAt: ""
     description: Node Maintenance Operator for cordoning and draining nodes.
     olm.skipRange: '>=0.12.0'
     operatorframework.io/suggested-namespace: openshift-workload-availability
